/********************************************************************
    created:	2016/8/18 11:44:52
    author:		rush
    email:		
	
    purpose:	
*********************************************************************/
syntax = "proto2";
package DataModel;

import "google/protobuf/timestamp.proto";
import "Protos/CommonDm.proto";
import "Protos/Neo/NeoCommon.proto";


message PriceEntry 
{
    required double Price   = 1;
    optional uint32 Size    = 2;
    optional uint32 OrdersNum = 3;
}

// ¼òµ¥tick
message TickDM 
{
    required uint64             Id = 1;
    required uint64             SecurityId = 2;
    optional string             Symbol =3;

    required google.protobuf.Timestamp   Time = 4;

    required double              Price = 5;
    optional double              Volume = 6;
    optional double              Turnover = 7;

//    optional PriceEntry          Bid = 10;
//    optional PriceEntry          Ask = 11;
}


// 
message BarDM 
{
    required uint64             Id = 1;
    required uint64             SecurityId = 2;
    optional string             Symbol =3;
    required ETimeFrame         TimeFrame = 4;
    required google.protobuf.Timestamp   Time = 5;

    required double             Open = 10;
    required double             High = 11;
    required double             Low = 12;
    required double             Close = 13;
    optional double             Preclose = 14;

    optional double             Volume = 15;
    optional double             Turnover = 16;
}
